add response entity, security and exception handler