@@ -4,10 +4,11 @@ import com.it.academy.springbootqa2.dto.StreetDTO;
 import com.it.academy.springbootqa2.mappers.StreetMapper;
 import com.it.academy.springbootqa2.services.StreetService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/street")
@@ -22,34 +23,41 @@ public class StreetController {
     }
 
     @GetMapping
-    public List<StreetDTO> getAll() {
-        return streetService.getAll().stream().map(
-                streetMapper::convertToDTO).collect(Collectors.toList());
+    public ResponseEntity<List<StreetDTO>> getAll() {
+        List<StreetDTO> streetDTOList = streetService.getAll().stream().map(
+                streetMapper::convertToDTO).toList();
+        return new ResponseEntity<>(streetDTOList, HttpStatus.OK);
     }
 
     @GetMapping("/{id}")
-    public StreetDTO getById(@PathVariable Long id) {
-        return streetMapper.convertToDTO(streetService.getById(id));
+    public ResponseEntity<StreetDTO> getById(@PathVariable Long id) {
+        StreetDTO streetDTO = streetMapper.convertToDTO(streetService.getById(id));
+        return new ResponseEntity<>(streetDTO, HttpStatus.OK);
     }
 
     @GetMapping("/city/{id}")
-    public List<StreetDTO> getStreetsByCityId(@PathVariable Long id) {
-        return streetService.getByCityId(id).stream().map(streetMapper::convertToDTO).toList();
+    public ResponseEntity<List<StreetDTO>> getStreetsByCityId(@PathVariable Long id) {
+        List<StreetDTO> streetDTOList = streetService.getByCityId(id)
+                .stream().map(streetMapper::convertToDTO).toList();
+        return new ResponseEntity<>(streetDTOList, HttpStatus.OK);
     }
 
     @PostMapping
-    public Long save(@RequestBody StreetDTO streetDTO) {
-        return streetService.save(streetMapper.convertToEntity(streetDTO));
+    public ResponseEntity<Long> save(@RequestBody StreetDTO streetDTO) {
+        Long savedStreetId = streetService.save(streetMapper.convertToEntity(streetDTO));
+        return new ResponseEntity<>(savedStreetId, HttpStatus.CREATED);
     }
 
     @DeleteMapping("/{id}")
-    public Long deleteById(@PathVariable Long id) {
-        return streetService.deleteById(id);
+    public ResponseEntity<Long> deleteById(@PathVariable Long id) {
+        Long deletedStreetId = streetService.deleteById(id);
+        return new ResponseEntity<>(deletedStreetId, HttpStatus.NO_CONTENT);
     }
 
     @PutMapping("/{id}")
-    public Long update(@PathVariable Long id, @RequestBody StreetDTO streetDTO) {
-        return streetService.updateById(id, streetMapper.convertToEntity(streetDTO));
+    public ResponseEntity<Long> update(@PathVariable Long id, @RequestBody StreetDTO streetDTO) {
+        Long updatedStreetId = streetService.updateById(id, streetMapper.convertToEntity(streetDTO));
+        return new ResponseEntity<>(updatedStreetId, HttpStatus.OK);
     }
 
 }
